<resources>
    <string name="app_name">Quick Jobs</string>
    <string name="started_title">Quick Jobs</string>
    <string name="stared_sub_title">
        Nice to meet you,come join our community!
        <br><b>Login</b> if you already have an account.</br>
        <br><b>Register</b> to get started with the app.</br>
    </string>
    <string name="illustration_img" />
    <string name="btn_register">Register</string>
    <string name="btn_login">Login</string>
    <string name="login_title">Login to app</string>
    <string name="login_sub_title">
 <font color="#00C9B8"><b>Login</b></font> if you already have an account.

    </string>
    <string name="login_password">Your Password</string>
    <string name="login_forgot_pw">Forgot Password</string>
    <string name="login_havent_account">I don\'t have account
    <font color="#00C9B8"><b>Register</b></font>
    </string>

    <string name="register_title">Create an account</string>

    <string name="register_sub_title">
        <font color="#00C988"><b>Register</b></font> to get stared with the app.
    </string>
    <string name="register_fullname">Your Fullname</string>
    <string name="register_email">Your email</string>
    <string name="register_username">Your username</string>
    <string name="register_comfirm_password">comfirm password</string>
    <string name="register_have_account">
        I already have an account
        <font color="#00C9B8"><b>Login</b></font>
    </string>
    <string name="home_title">Hello World!</string>
    <string name="home_sub_title">Welcome to Home</string>
    <string name="btn_logout">Logout</string>
    <string name="reset_pw_title">Reset your password</string>
    <string name="reset_pw_sub_title">
<font color="00C988">Reset Password</font> If you forget your password.
    </string>
    <string name="btn_reset_pw">Reset Password</string>
    <string name="back_to_login">Back to <font color="#00C9B8"><b>Login</b></font>
    </string>
    <!--  Jobs Publish | Nipuni  -->
    <string name="tv_Calculation_title">Salary Calculation</string>
    <string name="salary_calculation">Salary Calculation</string>

    <string name="all_jobs">All Jobs</string>
    <string name="calculate_salary">Calculate your Salary</string>
    <string name="edit_job_info">Edit Job Info</string>
    <string name="basic_sal">Basic Salary</string>
    <string name="Title1">Title here</string>
    <string name="Edit_btn1">Edit</string>
    <string name="Epf">EPF</string>
    <string name="Cal_btn1">Calculate</string>
    <string name="Job_title_Edit">Job title</string>
    <string name="edit_Des">Description</string>
    <string name="submit_btn">Submit</string>
    <string name="del_Btn">Delete</string>
    <string name="Add_new_Job">Add a new Job</string>
    <string name="edit_job">Edit Job</string>
    <string name="job_title">Job title</string>
    <string name="Add_des">Description</string>
    <string name="sub_Btn">Submit</string>
    <string name="job_update">Update</string>
    <string name="all_Jobs">All Jobs</string>
    <string name="view">View</string>
    <string name="title_here">Title here</string>
    <string name="des_here">Description here</string>

    <string name="todo">TODO</string>
    <string name="add_a_new_category">Add a New Category</string>
    <string name="todo1">TODO</string>
    <string name="todo2">TODO</string>
    <string name="category_title">Category Title</string>
    <string name="submit">Submit</string>

    <string name="todo33">TODO</string>
    <string name="update_category">Update Category</string>
    <string name="todo44">TODO</string>
    <string name="current_category_title">Current Category Title</string>
    <string name="new_title">New Title</string>
    <string name="update">Update</string>
    <string name="delete">Delete</string>

    <string name="tv_header">Quick Job</string>
    <string name="tv_tv1">Did you find your dream job?</string>
    <string name="btn_apply">APPLY NOW</string>
    <string name="btn_fetch">VIEW APPLICANTS</string>
    <string name="tv_title">Job Application</string>
    <string name="tv_name">Name :</string>
    <string name="et_name" />
    <string name="tv_email">Email :</string>
    <string name="et_email" />
    <string name="tv_phoneNo">Phone number :</string>
    <string name="et_phoneNo" />
    <string name="tv_jobName">Name of the job :</string>
    <string name="et_jobName" />
    <string name="tv_position">What position are you applying for :</string>
    <string name="tv_status">Current employment status :</string>
    <string name="et_status" />
    <string name="btn_submit">SUBMIT</string>
    <string name="search_elements">Search elements</string>
    <string name="apply_category">apply_category</string>
    <string name="categories">Categories</string>
    <string name="hello">Hello</string>
    <string name="sandu">Sandu</string>
    <string name="apply">apply</string>
    <string name="tax">TAX</string>
    <string name="logout">Logout</string>
    <string name="employee_add">Employee Add</string>
    <string name="home">Home</string>
    <string name="setting">Setting</string>
    <string name="profile">Profile</string>
    <string name="login">Login</string>
    <string name="notification">Notification</string>
    <string name="img_logo">img_logo</string>
    <string name="quick_job_app">Quick Job App</string>
    <string name="discover_your_dream_job">Discover Your Dream Job</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="btn_cvapply">cvapply</string>
    <string name="btn_Apply">Apply</string>
    <string name="btn_cv">CREATE CV</string>


</resources>