<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Tn_jobApplication"
    android:background="#2A00C988">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="410dp"
        android:layout_height="100dp"
        android:background="#00C988"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="-2dp">

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="64dp"
            android:layout_marginStart="65dp"
            android:layout_marginTop="25dp"
            android:text="@string/tv_title"
            android:textAlignment="center"
            android:textSize="40sp" />
    </LinearLayout>

    <TextView
        android:id="@+id/tv_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="128dp"
        android:text="@string/tv_name"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/et_name"
        android:layout_width="377dp"
        android:layout_height="52dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="148dp"
        android:ems="10"
        android:hint="Name"
        android:inputType="textPersonName"
        android:text="@string/et_name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="220dp"
        android:text="@string/tv_email"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/et_email"
        android:layout_width="381dp"
        android:layout_height="51dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="252dp"
        android:ems="10"
        android:hint="Email"
        android:inputType="textPersonName"
        android:text="@string/et_email"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_phoneNo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="308dp"
        android:text="@string/tv_phoneNo"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/et_phoneNo"
        android:layout_width="381dp"
        android:layout_height="50dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="340dp"
        android:ems="10"
        android:hint="+97"
        android:inputType="textPersonName"
        android:text="@string/et_phoneNo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_jobName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="404dp"
        android:text="@string/tv_jobName"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/et_jobName"
        android:layout_width="379dp"
        android:layout_height="48dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="428dp"
        android:ems="10"
        android:hint="job name"
        android:inputType="textPersonName"
        android:text="@string/et_jobName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_position"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="488dp"
        android:text="@string/tv_position"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/et_position"
        android:layout_width="379dp"
        android:layout_height="51dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="520dp"
        android:ems="10"
        android:hint="Position"
        android:inputType="textPersonName"
        android:text="@string/et_jobName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="576dp"
        android:text="@string/tv_status"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/et_status"
        android:layout_width="375dp"
        android:layout_height="53dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="608dp"
        android:ems="10"
        android:hint="Status"
        android:inputType="textPersonName"
        android:text="@string/et_status"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btn_submit"
        android:layout_width="214dp"
        android:layout_height="52dp"
        android:layout_marginStart="96dp"
        android:layout_marginTop="672dp"
        android:backgroundTint="#00C988"
        android:text="@string/btn_submit"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>