<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="176dp"
    android:gravity="bottom"
    android:padding="16dp"
    android:background="@color/primary_color"
    android:theme="@style/ThemeOverlay.AppCompat.Dark">

    <ImageView
        android:layout_width="120dp"
        android:layout_height="80dp"
        android:contentDescription="@string/img_logo"
        android:src="@drawable/logo"
        tools:ignore="ImageContrastCheck" />

    <TextView
        android:id="@+id/user_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/quick_job_app"
        android:textStyle="bold"
        android:textSize="20sp"
        android:textColor="@color/black"/>

    <TextView
        android:id="@+id/user_name1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/discover_your_dream_job"
        android:textColor="#424242"
        android:textSize="16sp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="30dp"/>

</LinearLayout>