<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <!--Input title-->
    <RelativeLayout
        android:id="@+id/toolbarRl"
        android:layout_width="match_parent"
        android:layout_height="210dp"
        android:background="@color/primary_color"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="0dp">

        <ImageButton
            android:id="@+id/go_back_btn1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp"
            android:background="@android:color/transparent"
            android:contentDescription="@string/todo33"
            android:minWidth="48dp"
            android:minHeight="48dp"
            android:padding="5dp"
            app:srcCompat="?attr/actionModeCloseDrawable"
            tools:ignore="SpeakableTextPresentCheck,DuplicateSpeakableTextCheck" />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="50dp"
            app:srcCompat="@drawable/logo123"
            tools:ignore="ImageContrastCheck"
            android:contentDescription="@string/todo44" />

        <TextView
            android:id="@+id/AddCate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/imageView"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:fontFamily="sans-serif-condensed"
            android:scrollbarSize="28sp"
            android:text="@string/update_category"
            android:textColor="@color/black"
            android:textSize="28sp" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/CatTitle"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="20dp"

            android:drawablePadding="10dp"
            android:hint="@string/current_category_title"
            android:inputType="textPersonName|textCapWords"
            android:padding="10dp"
            android:textColor="@color/black"
            android:autofillHints=""
            tools:ignore="VisualLintTextFieldSize" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/description12"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="20dp"

            android:drawablePadding="10dp"
            android:hint="@string/new_title"
            android:inputType="textPersonName|textCapWords"
            android:padding="10dp"
            android:textColor="@color/black"
            android:autofillHints=""
            tools:ignore="VisualLintTextFieldSize" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Button
            android:id="@+id/editButton12"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_weight="1"
            android:backgroundTint="@color/primary_color"
            android:text="@string/update"
            android:textColor="@color/black"
            android:textSize="18sp"
            tools:ignore="TextSizeCheck,VisualLintButtonSize"
            style="?android:attr/buttonBarButtonStyle" />

        <Button
            android:id="@+id/deleteButton12"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_weight="1"
            android:backgroundTint="@color/primary_color"
            android:text="@string/delete"
            android:textColor="@color/black"
            android:textSize="18sp"
            tools:ignore="TextSizeCheck,VisualLintButtonSize"
            style="?android:attr/buttonBarButtonStyle" />

    </LinearLayout>
</LinearLayout>