<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Tn_jobApplicationHome"
    android:background="@color/primary_color">

    <TextView
        android:id="@+id/tv_header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/tv_header"
        android:textColor="#FFFFFF"
        android:textSize="26sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

<!--    <ImageView-->
<!--        android:id="@+id/imageView"-->
<!--        android:layout_width="160dp"-->
<!--        android:layout_height="160dp"-->
<!--        android:layout_marginStart="228dp"-->
<!--        android:layout_marginTop="16dp"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        app:layout_constraintTop_toTopOf="parent"-->
<!--        app:srcCompat="?android:attr/actionModeFindDrawable" />-->

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:layout_marginTop="208dp"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/illustration_started"
        tools:layout_editor_absoluteX="0dp" />

    <TextView
        android:id="@+id/tv_tv6"
        android:layout_width="354dp"
        android:layout_height="101dp"
        android:background="#00C988"
        android:text="@string/tv_tv1"
        android:textColor="#235954"
        android:textSize="40sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.28"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.109" />

    <Button
        android:id="@+id/btn_View"
        android:layout_width="348dp"
        android:layout_height="72dp"
        android:layout_marginTop="576dp"
        android:backgroundTint="#FFFFFF"
        android:text="@string/btn_fetch"
        android:textColor="#00C988"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.492"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btn_Apply"
        android:layout_width="345dp"
        android:layout_height="73dp"
        android:layout_marginTop="504dp"
        android:backgroundTint="#FFFFFF"
        android:text="@string/btn_apply"
        android:textColor="#00C988"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/btn_View"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.515"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/btn_apply"
        android:layout_width="348dp"
        android:layout_height="72dp"
        android:layout_marginTop="648dp"
        android:backgroundTint="#FFFFFF"
        android:text="@string/btn_cv"
        android:textColor="#00C988"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.539"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>